--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,9 @@ body {
 }
 
 .header__logo {
-  width: 100px;
-  height: 50px;
-  outline: 1px solid #000;
-  background-color: #fff;
-  text-align: center;
+  color: #fdff6e;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .products {
@@ -24,6 +22,68 @@ body {
   display: flex;
   justify-content: space-around;
   margin-top: 40px;
+}
+
+.btn-search {
+  background-color: transparent;
+  border: none;
+  color: #fdff6e;
+  font-size: 1.2em;
+  position: absolute;
+  bottom: 5px;
+  right: 0;
+  outline: none;
+  cursor: pointer;
+}
+
+.search-form {
+  position: relative;
+  margin-right: 50px;
+  display: inline-block;
+}
+.search-field:focus {
+  outline: none;
+}
+.search-field {
+  box-sizing: border-box;
+  width: 200px;
+  color: #fafafa;
+  padding: 10px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #fafafa;
+}
+
+.cart {
+  position: relative;
+}
+.cart-block {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+  border-radius: 5px;
+  box-sizing: border-box;
+  right: 20px;
+  top: 130%;
+  position: absolute;
+  background-color: white;
+  padding: 20px;
+  color: black;
+  width: 365px;
+}
+
+.cart-block:before {
+  content: '';
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: -10px;
+  right: 46px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid white;
+}
+
+.invisible {
+  display: none;
 }
 
 .btn-cart {
@@ -56,6 +116,17 @@ body {
   flex-direction: column;
 }
 
+.product-cart-item {
+  display: flex;
+  align-items: center;
+  border: 1px solid #000;
+  background-color: #fff;
+}
+
+.desc {
+  margin: 0 18px 0 18px;
+}
+
 .product-img {
   border: 1px solid #000;
   margin: 10px;
@@ -75,34 +146,10 @@ body {
   width: 140px;
   outline: none;
   transition: 0.3s;
+  font-size: 14px;
 }
 
 .by-btn:hover {
   background-color: #ffe000;
   color: #ff0000;
-}
-
-.goods-list {
-  display: none;
-  position: absolute;
-  top: 90px;
-  right: 70px;
-}
-
-#goods-list-section__modal {
-  background-color: #fff;
-  border: 1px solid black;
-  width: 200px;
-}
-
-#goods-list-section__delete {
-  margin: 5px 0 0 5px;
-}
-
-#goods-list_head-line {
-  margin-left: 25px;
-}
-
-#goods-list__total {
-  margin-left: 25px;
 }
